--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">blood</string>
+    <string name="app_name">Saylani</string>
     <string name="facebook_app_id">164140221841909</string>
 
 </resources>
